--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -14,6 +14,7 @@
   
   <!-- Theme CSS -->
   {{ 'theme.css' | asset_url | stylesheet_tag }}
+  {{ 'product-card.css' | asset_url | stylesheet_tag }}
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
