--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -15,6 +15,7 @@
   <!-- Theme CSS -->
   {{ 'theme.css' | asset_url | stylesheet_tag }}
   {{ 'product-card.css' | asset_url | stylesheet_tag }}
+  {{ 'mobile-categories.css' | asset_url | stylesheet_tag }}
   
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
