--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -79,11 +79,12 @@
   </div>
 </header>
 
-{% if section.settings.enable_mobile_categories %}
+{% comment %}
+  Mobile Categories Navigation - Instagram-style categories at the top of the page on mobile
+{% endcomment %}
 <div class="mobile-categories-container">
   {% render 'mobile-categories-nav' %}
 </div>
-{% endif %}
 
 {% if section.settings.mobile_navbar_style == 'bottom_tabs' %}
   <div class="mobile-bottom-navbar">
