--- a/sections/mobile-toplevel-categories.liquid
+++ b/sections/mobile-toplevel-categories.liquid
@@ -237,7 +237,7 @@
 
 {% schema %}
 {
-  "name": "Mobile Top-level Categories",
+  "name": "Mobile Categories",
   "tag": "section",
   "class": "section",
   "settings": [
@@ -364,7 +364,7 @@
   ],
   "presets": [
     {
-      "name": "Mobile Top-level Categories",
+      "name": "Mobile Categories",
       "category": "Collection"
     }
   ]
